  
* Added support for LXR 0.9.5, which renamed the database tables to
  contain an lxr_ prefix by default.  Support for older LXR databases
  will still work by default.  LXR entities are now rendered in black text,
  the same as program code, but an underline is shown when hovered over.
  
* Updated the Subversion diff parser so that it correctly identifies new
  files, rather than treating them as modified files. 
	
Version 1.9.4

* Emit a javascript warning if the external javascript files could
  not be loaded.  This usually occurs due to apache misconfiguration.

* Allow subversion repositories that communicate using the Subversion
  protocol to be specified in @valid_repositories as
  'svn://my.subversion.server/repos/product/trunk' rather than
  'svn:svn://my.subversion.server/repos/product/trunk'.

* Support subversion diff files which contain "Copied:" entries.

* Improved patch file parsing for handling binary file changes.

* Ensure emails sent contain the header "MIME-Version: 1.0" for
  RFC2045 conformance.  Submitted by Vadim Zeitlin
  <vadz@users.sourceforge.net>.

* CSS cleanups from Kannan Goundan <cakoose@users.sourceforge.net>.

* Bottom coloured row on topic list screen didn't extend across full
  width of browser window if bug-tracking or custom comment metrics
  were defined.  This has now been fixed.

* Place a clear divider between comment blocks on the view topic
  comments screen, as suggested by Nikita V. Borodikhin
  <eliterr@users.sourceforge.net> to minimise confusion.

* The topic comments tab count would incorrectly display the number
  of comment threads rather than the number of comments, when viewing
  the topic text.  This has now been fixed.

* Handle Subversion files which contain @ in the filename.

* Codestriker now behaves correctly under mod_perl when retrieving
  data externally from an SCM system, such as when the Parallel link
  is clicked, or when a topic is created directly from the SCM.
