@@ -17,39 +17,21 @@ use Codestriker::Http::LineFilter;
 @Codestriker::Http::LineBreakLineFilter::ISA =
     ("Codestriker::Http::LineFilter");
 
-# Take the linebreak mode as a parameter.
 sub new {
-    my ($type, $brmode, $inspan) = @_;
+    my ($type) = @_;
 
     my $self = Codestriker::Http::LineFilter->new();
-    $self->{brmode} = $brmode;
-    $self->{inspan} = $inspan;
-
     return bless $self, $type;
 }
 
 # Convert the spaces appropriately for line-breaking.
 sub _filter {
     my ($self, $text) = @_;
-    
-    if ($self->{brmode} == $Codestriker::LINE_BREAK_ASSIST_MODE) {
-    	# TODO: fix this for highlighted version.
-		$text =~ s/^(\s+)/my $sp='';for(my $i=0;$i<length($1);$i++){$sp.='&nbsp;'}$sp;/ge;
-    }
-    else {
-		if ($self->{inspan}) {
-			my @lines = split /\n/, $text;
-			my $result = "";
-			foreach my $line (@lines) {
-				$line =~ s/^( [ ]+)/('&nbsp;' x length($1))/eo;
-				$line =~ s/(>[^<]*?)( [ ]+)/$1 . ('&nbsp;' x length($2))/eog;
-				$result .= $line . "\n";
-			} 
-			$text = $result;
-		} else {
-			$text =~ s/ /&nbsp;/g;
-		}     	
-    }
+
+    # Replace more than one space with the appropriate number of line breaks.
+    # Ensure a real space is left there so if necessary, the browser can
+    # perform wrapping.    
+    $text =~ s/( [ ]+)/' ' . ('&nbsp;' x (length($1)-1))/eog;			
 
     return $text;
 }
